# RCI_ros2_lecture

./: README.md
cpp_parameters/: CMakeLists.txt  package.xml
cpp_pubsub/: package.xml
cpp_srvcli/: CMakeLists.txt  package.xml
hello_ros_cpp/: CMakeLists.txt
launch_tutorial/: CMakeLists.txt  package.xml
launch_tutorial/launch/: reverse.launch.py
launch_tutorial/src/: parameter.cpp
lecture 2/: README.md
lecture_2/: README.md
lecture_4/: Lecture #4. Python.ipynb
lecture_5/hello_ros_cpp/: package.xml
lecture_5/hello_ros_cpp/src/: practice2.cpp  practice3.cpp
lecture_6/topic_tutorial_cpp/: CMakeLists.txt
lecture_6/topic_tutorial_cpp/src/: direction.cpp  pubvel.cpp
lecture_7/launch_tutorial/launch/: namespace.launch.py  parameter.launch.py  randvelturtlesim.launch.py  turtleflag.launch.py
lecture_7/launch_tutorial/src/: reverse.cpp
lecture_8/my_srv/: CMakeLists.txt  package.xml
lecture_8/service_tutorial_cpp/: CMakeLists.txt  package.xml
lecture_8/service_tutorial_cpp/src/: turtle_spawn.cpp  velocity_toggle.cpp  velocity_toggle_plus.cpp
lecture_9/action_tutorial_cpp/: CMakeLists.txt  package.xml
lecture_9/action_tutorial_cpp/launch/: add_action_launch.py  move_action_launch.py
lecture_9/action_tutorial_cpp/src/: add_client.cpp  add_server.cpp  move_action_client.cpp  move_action_server.cpp
lecture_9/my_action/: CMakeLists.txt  package.xml
lecture_9/my_action/action/: AddUntilGoal.action  MoveTurtle.action
more_interfaces/: CMakeLists.txt  package.xml
topic_tutorial_cpp/: package.xml
topic_tutorial_cpp/src/: direction.cpp  subpose.cpp
tutorial_interfaces/: CMakeLists.txt  package.xml
